# comfyui-gemini-hub

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  node_list.json  pyproject.toml  requirements.txt  validate.py
nodes/: __init__.py  gemini_chat_node.py  gemini_speech_to_text_node.py  gemini_text_to_speech_node.py
